# tappay-python

./: .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tappay/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py
